; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/extr_pthread_set.c_pthread_setschedparam.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/extr_pthread_set.c_pthread_setschedparam.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sched_param = type { i32 }

@SCHED_MIN = common dso_local global i32 0, align 4
@SCHED_MAX = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@SCHED_OTHER = common dso_local global i32 0, align 4
@ENOTSUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pthread_setschedparam(i32 %0, i32 %1, %struct.sched_param* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.sched_param*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store %struct.sched_param* %2, %struct.sched_param** %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @pthread_kill(i32 %9, i32 0)
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* %8, align 4
  %12 = icmp ne i32 0, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* %8, align 4
  store i32 %14, i32* %4, align 4
  br label %38

15:                                               ; preds = %3
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @SCHED_MIN, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %23, label %19

19:                                               ; preds = %15
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* @SCHED_MAX, align 4
  %22 = icmp sgt i32 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %19, %15
  %24 = load i32, i32* @EINVAL, align 4
  store i32 %24, i32* %4, align 4
  br label %38

25:                                               ; preds = %19
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* @SCHED_OTHER, align 4
  %28 = icmp ne i32 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %25
  %30 = load i32, i32* @ENOTSUP, align 4
  store i32 %30, i32* %4, align 4
  br label %38

31:                                               ; preds = %25
  %32 = load i32, i32* %5, align 4
  %33 = load i32, i32* %6, align 4
  %34 = load %struct.sched_param*, %struct.sched_param** %7, align 8
  %35 = getelementptr inbounds %struct.sched_param, %struct.sched_param* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @pte_setthreadpriority(i32 %32, i32 %33, i32 %36)
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %31, %29, %23, %13
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i32 @pthread_kill(i32, i32) #1

declare dso_local i32 @pte_setthreadpriority(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
